--- a/src/App.scss
+++ b/src/App.scss
@@ -6,11 +6,17 @@
 
 // 4.Layout
 
+// 5.Mixins
+
 // 1. Normalize css
 @import "partials/normalize";
 
 // 2.Variables
 @import "partials/variables/variables";
+
+// 5.Mixins
+
+@import "partials/mixins";
 
 // 3. Typography
 
@@ -19,3 +25,9 @@
 // 4.Layout
 
 @import "partials/layout";
+
+
+
+// 6.Navigation
+
+@import "partials/navigation";
