--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,8 @@
 
+body{
+    min-height: 100vh;
+    box-sizing: border-box;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
