--- a/src/partials/_layout.scss
+++ b/src/partials/_layout.scss
@@ -167,6 +167,32 @@ grid-row: 3;
 
     }
 }
+
+.recipe_result{
+    grid-row: 3;
+    grid-column: 1/-1;
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    div{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        img{
+            grid-row: 1;
+            grid-column: 1/-1;
+            @include round_image_individual(10%,10%)
+        }
+        h4{
+grid-row: 2;
+        }
+        p:nth-of-type(1){
+grid-row: 3;
+        }
+        p:nth-of-type(2){
+            grid-row: 4;
+        }
+
+    }
+}
 }
 //end Featured recipes
 // end homepage styling
