--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,9 @@ body{
     flex-flow: column nowrap;
     justify-content: space-between;
 }
+.App{
+    min-height: 100vh;
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: space-between;
+}
