--- a/src/partials/layouts/_layout.scss
+++ b/src/partials/layouts/_layout.scss
@@ -1,6 +1,7 @@
 // Dont write any SCSS here please migrate your styling to individual pages
 
 @import "loginlayout" ;
+@import "recipe_content";
 
 img {
   max-width: 100%;
