--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,10 @@ body{
  .app_header{
         padding: 0 .5rem;
     }
+
+    .home_page{
+        height: 100vh;
+        display: flex;
+        flex-flow: column nowrap;
+        justify-content: space-between;
+    }
