--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -3,20 +3,100 @@
   flex-flow: row nowrap;
   align-items: center;
   justify-content: space-between;
+	padding: 0.25rem 0.5rem 0rem 0.5rem;
+	background: #FFF8EF;
+	border-bottom: 3px solid #FB9400;
+	box-shadow: 0px 2px 2px #FB9400;
 
-  .search {
-    margin-right: 0.5rem;
+  nav ul {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-evenly;
+    gap: 1.5rem;
+		margin: 0;
+		padding: 0;
 
-    input {
-      padding: 0.1rem;
-      background: url("../assets/svg/search-icon.svg");
-      background-position: 2% 50%;
-      background-size: contain;
-      background-repeat: no-repeat;
-      outline: none;
-      border-color: none;
+    li {
+      list-style-type: none;
+			align-self: center;
+
+			a {
+				font-family: "Avenir", sans-serif;
+				font-weight: 800;
+				font-size: 1rem;
+				color: #000000;
+				text-decoration: none;
+			}
     }
   }
+
+  svg {
+    height: auto;
+    min-width: 100%;
+    align-self: center;
+  }
+
+  .logo {
+    display: grid;
+		align-self: center;
+		padding-left: 0.25rem;
+
+		a {
+			img {
+				width: 14rem;
+			}
+		}
+  }
+
+  .search {
+		display: flex;
+		margin-right: 0.75rem;
+		transition: all 0.3s ease;
+
+		.search-btn {
+			background-color: transparent;
+			border: none;
+			padding: 0;
+			cursor: pointer;
+			transition: all 0.3s ease;
+
+			svg {
+				width: 1.5rem;
+				vertical-align: middle;
+				transition: all 0.3s ease;
+			}
+		}
+
+    input {
+			background-color: transparent;
+			border: none;
+			width: 0;
+			padding: 0;
+			transition: all 0.3s ease;
+			outline: none;
+    }
+  }
+
+	.search.active {
+    background-color: #fff;
+    border-radius: 20px;
+
+		.search-btn {
+			padding: 0.5rem 0.53rem;
+			background: #FB9400;
+			border-radius: 50%;
+			color: #fff;
+
+			svg {
+				width: 1rem;
+			}
+		}
+
+		input {
+			width: 10rem;
+    	padding: 0.5rem;
+		}
+	}
 
   .desktop_nav {
     display: none;
@@ -28,15 +108,19 @@
     .desktop {
       display: flex;
       align-items: center;
+			gap: 1.2rem;
 
       ul {
-        padding-right: 0.5rem;
         align-items: center;
-        border-right: 1px solid black;
+        border-right: 3px solid black;
+				padding: 0.5rem 1.5rem 0.5rem 0;
 
-        img {
-          width: 1.3rem;
-        }
+				li {
+					img {
+						width: 1.8rem;
+    				vertical-align: middle;
+					}
+				}
       }
     }
   }
@@ -51,28 +135,6 @@
 
     @media screen and (min-width: 600px) {
       display: none;
-    }
-  }
-
-  .logo {
-    display: grid;
-    align-self: flex-end;
-  }
-
-  svg {
-    height: auto;
-    min-width: 100%;
-    align-self: center;
-  }
-
-  nav ul {
-    display: flex;
-    flex-flow: row nowrap;
-    justify-content: space-evenly;
-    gap: $grid-gap;
-
-    li {
-      list-style-type: none;
     }
   }
 }
