--- a/src/sass/page-specific/_page-specific.scss
+++ b/src/sass/page-specific/_page-specific.scss
@@ -11,6 +11,14 @@ img {
 
 .app_footer {
   text-align: center;
+	background: #FFF8EF;
+
+	p {
+		font-family: "Avenir", sans-serif;
+		font-weight: 800;
+		font-size: 1rem;
+		color: #000000;
+	}
 }
 
 // homepage styling only
@@ -63,12 +71,12 @@ img {
       display: grid;
       grid-template-columns: repeat(1, 1fr);
       justify-content: center;
-      gap: $grid-gap;
+      gap: .5rem;
       padding:0 .5rem;
       @media screen and (min-width: 600px) {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        gap: $grid-gap;
+        gap: .5rem;
       }
       h3 {
         justify-self: center;
@@ -77,7 +85,7 @@ img {
       .contact_inputs {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
-        gap: $grid-gap;
+        gap: .5rem;
         border: 1px solid black;
         padding: 1rem;
 
@@ -85,7 +93,7 @@ img {
           grid-column: 1/-1;
           grid-row: 2;
           display: grid;
-          gap: $grid-gap;
+          gap: .5rem;
           grid-template-columns: repeat(2, 1fr);
 
           padding: 1rem;
@@ -145,7 +153,7 @@ img {
           .featuress:nth-of-type(odd) {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: $grid-gap;
+            gap: .5rem;
             img {
               grid-column: 1/2;
             }
@@ -156,7 +164,7 @@ img {
           .featuress:nth-of-type(even) {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
-            gap: $grid-gap;
+            gap: .5rem;
             .inputs_wrapper {
               grid-column: 1/2;
               grid-row: 1;
