signup page added

--- a/src/SASS/partials/_navigation.scss
+++ b/src/SASS/partials/_navigation.scss
@@ -4,7 +4,7 @@
   align-items: center;
   justify-content: space-between;
   .search {
-      margin-right: .5rem;
+      margin-left: .5rem;
     input {
       padding: .1rem;
       background: url("../../assets/svg/search-icon.svg");
