--- a/src/sass/page-specific/_signup.scss
+++ b/src/sass/page-specific/_signup.scss
@@ -9,7 +9,7 @@
   margin: 0 auto;
   .inputs {
     margin-top: 0.5rem;
-    gap: $grid-gap;
+    gap: 0.5rem;
     display: flex;
     flex-flow: column nowrap;
     justify-content: center;
