--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,34 @@
-
-body{
-    min-height: 100vh;
-    box-sizing: border-box;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
-  
-}
-.App{
-    min-height: 100vh;
-    display: flex;
-    flex-flow: column nowrap;
-    justify-content: space-between;
+html {
+	height: 100%;
+  min-height: 100vh;
+	margin: 0;
+	/* overflow-x: hidden; */
 }
 
- .app_header{
-        padding: 0 .5rem;
-    }
+body {
+	height: 100%;
+  min-height: 100vh;
+	margin: 0;
+  box-sizing: border-box;
+  display: flex;
+	flex-direction: column;
+  justify-content: space-between;
+	/* overflow-x: hidden; */
+}
+.App {
+  min-height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+}
 
-    .home_page{
-        height: 100vh;
-        display: flex;
-        flex-flow: column nowrap;
-        justify-content: space-between;
-    }
+.app_header {
+  padding: 0 0.5rem;
+}
+
+.home_page {
+  height: 100vh;
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: space-between;
+}
