--- a/src/sass/_navigation.scss
+++ b/src/sass/_navigation.scss
@@ -1,12 +1,19 @@
 .app_header {
-  display: flex;
-  flex-flow: row nowrap;
-  align-items: center;
-  justify-content: space-between;
 	padding: 0.25rem 0.5rem 0rem 0.5rem;
 	background: #FFF8EF;
 	border-bottom: 4px solid #FB9400;
 	box-shadow: 0px 2px 2px #FB9400;
+
+	@media screen and (max-width: 700px) {
+		padding: 0.25rem 0.5rem 0.25rem 0.5rem;
+	}
+
+	> * {
+		display: flex;
+		flex-flow: row nowrap;
+		align-items: center;
+		justify-content: space-between;
+	}
 
   nav ul {
     display: flex;
@@ -42,8 +49,22 @@
 		padding-left: 0.25rem;
 
 		a {
-			img {
+			img.desktop-header-logo {
+				display: block;
 				width: 14rem;
+			}
+			img.mobile-header-logo {
+				display: none;
+				width: 2.5rem;
+			}
+
+			@media screen and (max-width: 700px) {
+				img.desktop-header-logo {
+					display: none;
+				}
+				img.mobile-header-logo {
+					display: block;
+				}
 			}
 		}
   }
@@ -64,6 +85,25 @@
 				width: 1.5rem;
 				vertical-align: middle;
 				transition: all 0.3s ease;
+			}
+
+			.svg-1 {
+				display: block;
+			}
+
+			.svg-2 {
+				display: none;
+				transform: scale(1.3);
+			}
+
+			@media screen and (max-width: 700px) {
+				.svg-1 {
+					display: none;
+				}
+
+				.svg-2 {
+					display: block;
+				}
 			}
 		}
 
@@ -97,14 +137,14 @@
 		}
 	}
 
-  .desktop_nav {
-    display: none;
+  .desktop-nav-cont {
+		display: block;
 
-    @media screen and (min-width: 600px) {
-      display: block;
+    @media screen and (max-width: 700px) {
+			display: none;
     }
 
-    .desktop {
+    .desktop-nav{
       display: flex;
       align-items: center;
 			gap: 1.2rem;
@@ -124,16 +164,72 @@
     }
   }
 
-  .mobile_nav {
-    display: flex;
+  .mobile-nav-cont {
+		display: none;
     align-items: center;
+		gap: 1.2rem;
 
-    .mobile {
-      display: none !important;
+    .mobile-nav {
+			transform: translateX(100%);
+			transition: all 0.3s ease;
+			position: fixed;
+			left: 0;
+			right: 0;
+			bottom: 0;
+			top: 0;
+			background-color: #fff;
+			z-index: 1;
+			height: 100vh;
+			width: 100vw;
+			padding: 2rem;
+			overflow: auto;
+
+			ul {
+				display: grid;
+				gap: 2rem;
+				text-align: center;
+
+				li {
+					img {
+						max-width: 6rem;
+					}
+
+					a {
+						font-size: 2rem;
+					}
+				}
+			}
+
+			.mobile-nav-close-btn-cont {
+				position: absolute;
+				top: 1rem;
+				right: 1rem;
+
+				button {
+					font-size: 2rem;
+					background-color: transparent;
+					border: none;
+					padding: 0;
+					display: flex;
+				}
+			}
     }
 
-    @media screen and (min-width: 600px) {
-      display: none;
+		.mobile-nav.active {
+			transform: translateX(0);
+		}
+
+    @media screen and (max-width: 700px) {
+			display: flex;
     }
+
+		.mobile-nav-toggle-btn-cont {
+			button {
+				background-color: transparent;
+				border: none;
+				padding: 0;
+				display: flex;
+			}
+		}
   }
 }
