--- a/src/sass/page-specific/_login-signup.scss
+++ b/src/sass/page-specific/_login-signup.scss
@@ -1,12 +1,16 @@
 .login{
 	display: grid;
 	grid-template-columns: 1fr;
-	margin: 0 auto;
+	margin: 1rem auto;
 	padding: 3rem;
 	background: #FFF8EF;
 	gap: 2rem;
 	width: 80%;
-	max-width: 300px;
+	max-width: 400px;
+
+	@media screen and (max-width: 700px) {
+		padding: 1rem;
+	}
 
 	h1 {
 		margin: 0;
@@ -79,7 +83,11 @@
 	background: #FFF8EF;
 	gap: 2rem;
 	width: 80%;
-	max-width: 300px;
+	max-width: 400px;
+
+	@media screen and (max-width: 700px) {
+		padding: 1rem;
+	}
 
 	h1 {
 		margin: 0;
@@ -97,7 +105,7 @@
 		margin: 0 auto;
 
 		.add-profile-image-btn {
-			font-family: "Roboto", sans-serif;
+			font-family: "Avenir", sans-serif;
 			font-size: 1rem;
 			letter-spacing: 0.15px;
 			color: #FFFFFF;
