--- a/src/sass/page-specific/_team.scss
+++ b/src/sass/page-specific/_team.scss
@@ -1,15 +1,23 @@
 .team-page-cont {
 	padding: 4rem;
-	text-align: center;
-	display: grid;
-	gap: 2rem;
+
+	@media screen and (max-width: 700px) {
+		padding: 2rem;
+	}
+
+	> * {
+		text-align: center;
+		display: grid;
+		gap: 2rem;
+	}
 
 	.heading {
 		h1 {
-			font-family: "Roboto", sans-serif;
-			font-size: 1.5rem;
+			font-family: "Avenir", sans-serif;
+			font-size: 3rem;
 			letter-spacing: 0.03em;
 			color: #000000;
+			font-weight: 400;
 		}
 	}
 
@@ -17,15 +25,24 @@
 		font-family: "Avenir", sans-serif;
     color: #000000;
     text-align: left;
-		font-size: 1.25rem;
+		font-size: 1.5rem;
 		font-weight: 300;
 		line-height: 38px;
+
+		@media screen and (max-width: 700px) {
+			text-align: center;
+		}
 	}
 
 	.team-members-cont {
 		display: grid;
     gap: 4rem;
     grid-template-columns: repeat(3, 1fr);
+		padding: 2rem 0;
+
+		@media screen and (max-width: 700px) {
+			grid-template-columns: repeat(1, 1fr);
+		}
 
 		.member-cont {
 			display: grid;
@@ -49,14 +66,15 @@
 				.role {
 					font-family: "Avenir", sans-serif;
 					color: #000000;
-					font-size: 1.25rem;
+					font-size: 1.75rem;
 					font-weight: 500;
 				}
 
 				.description {
 					font-family: "Avenir", sans-serif;
-					font-size: 1rem;
+					font-size: 1.35rem;
 					font-weight: 300;
+					line-height: 1.4;
 				}
 
 				.linkedin-link {
